--- a/index.html
+++ b/index.html
@@ -1,13 +1,55 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>skylearn</title>
-  </head>
-  <body>
+    <title>SkyLearn - Calculus Solver</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- KaTeX CSS for math rendering -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" integrity="sha384-n8MVd4RsNIU0tAv4ct0nTaAbDJwPJzDEaqSD1odI+WdtXRGWt2kTvGFasHpSy3SV" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+      body {
+        font-family: 'Inter', sans-serif;
+      }
+      /* Custom scrollbar for sidebar */
+      ::-webkit-scrollbar {
+        width: 6px;
+      }
+      ::-webkit-scrollbar-track {
+        background: transparent;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #94a3b8;
+        border-radius: 3px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #64748b;
+      }
+      /* Adjust math font size */
+      .katex {
+        font-size: 1.1em;
+      }
+      /* Make block math scrollable on small screens and add spacing */
+      .katex-display {
+        overflow-x: auto;
+        overflow-y: hidden;
+        margin: 1.5em 0;
+        padding: 0.5em 0;
+      }
+      /* Ensure text doesn't look too cramped */
+      .prose p {
+        margin-bottom: 1.25em;
+        line-height: 1.8;
+      }
+    </style>
+  <script type="module" src="/src/main.jsx">
+
+  </script>
+<link rel="stylesheet" href="/src/index.css">
+</head>
+  <body class="bg-slate-50 text-slate-900 antialiased">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
